==> iNavFlight/inav/lib/main/ChibiOS/os/hal/ports/SAMA/LLD/USARTv1/hal_serial_lld.c <==
#include "hal.h"
#define sdEnableWP(sdp) {                                                    \
  sdp->UART_WPMR = UART_WPMR_WPKEY_PASSWD | UART_WPMR_WPEN;                  \
}
#define sdDisableWP(sdp) {                                                   \
  sdp->UART_WPMR = UART_WPMR_WPKEY_PASSWD;                                   \
}
#define sdFlexEnableWP(sdp) {                                                    \
  sdp->US_WPMR = US_WPMR_WPKEY_PASSWD | US_WPMR_WPEN;                            \
}
#define sdFlexDisableWP(sdp) {                                                   \
  sdp->US_WPMR = US_WPMR_WPKEY_PASSWD;                                           \
}

static void serve_interrupt(SerialDriver *sdp) {
  Uart *u = sdp->uart;
  uint32_t imr = u->UART_IMR;
  uint32_t sr;

  /* Reading and clearing status.*/
  sr = u->UART_SR;
  u->UART_CR |= UART_CR_RSTSTA;

  /* Error condition detection.*/
  if (sr & (UART_SR_OVRE | UART_SR_FRAME  | UART_SR_PARE)){
    set_error(sdp, sr);
  }

  /* Data available.*/
  if (sr & UART_SR_RXRDY) {
    osalSysLockFromISR();
    sdIncomingDataI(sdp, (uint8_t)u->UART_RHR);
    osalSysUnlockFromISR();
  }

  /* Transmission buffer empty.*/
  if ((imr & UART_IMR_TXRDY) && (sr & UART_SR_TXRDY)) {
    msg_t b;
    osalSysLockFromISR();
    b = oqGetI(&sdp->oqueue);
    if (b < MSG_OK) {
      chnAddFlagsI(sdp, CHN_OUTPUT_EMPTY);
      u->UART_IDR |= UART_IDR_TXRDY;
      u->UART_IER = UART_IER_TXEMPTY;
    }
    else
      u->UART_THR = b;
    osalSysUnlockFromISR();
  }

  /* Physical transmission end.*/
  if ((imr & UART_IMR_TXEMPTY) && (sr & (UART_SR_TXRDY | UART_SR_TXEMPTY))) {
    osalSysLockFromISR();
    if (oqIsEmptyI(&sdp->oqueue))
      chnAddFlagsI(sdp, CHN_TRANSMISSION_END);
    u->UART_IDR |= UART_IDR_TXRDY | UART_IDR_TXEMPTY;
    osalSysUnlockFromISR();
  }
}

void sd_lld_init(void) {

#if SAMA_SERIAL_USE_UART0
#if SAMA_HAL_IS_SECURE
  mtxConfigPeriphSecurity(MATRIX1, ID_UART0, SECURE_PER);
#endif /* SAMA_HAL_IS_SECURE */
  sdObjectInit(&SD0);
  iqObjectInit(&SD0.iqueue, sd_in_buf0, sizeof sd_in_buf0, NULL, &SD0);
  oqObjectInit(&SD0.oqueue, sd_out_buf0, sizeof sd_out_buf0, notify0, &SD0);
  SD0.uart = UART0;
  SD0.clock = SAMA_UART0CLK;

  aicSetSourcePriority(ID_UART0, SAMA_SERIAL_UART0_IRQ_PRIORITY);
  aicSetSourceHandler(ID_UART0, SAMA_UART0_HANDLER);
  aicEnableInt(ID_UART0);
#endif

#if SAMA_SERIAL_USE_UART1
#if SAMA_HAL_IS_SECURE
  mtxConfigPeriphSecurity(MATRIX1, ID_UART1, SECURE_PER);
#endif
  sdObjectInit(&SD1);
  iqObjectInit(&SD1.iqueue, sd_in_buf1, sizeof sd_in_buf1, NULL, &SD1);
  oqObjectInit(&SD1.oqueue, sd_out_buf1, sizeof sd_out_buf1, notify1, &SD1);
  SD1.uart = UART1;
  SD1.clock = SAMA_UART1CLK;

  aicSetSourcePriority(ID_UART1, SAMA_SERIAL_UART1_IRQ_PRIORITY);
  aicSetSourceHandler(ID_UART1, SAMA_UART1_HANDLER);
  aicEnableInt(ID_UART1);
#endif

#if SAMA_SERIAL_USE_UART2
#if SAMA_HAL_IS_SECURE
  mtxConfigPeriphSecurity(MATRIX1, ID_UART2, SECURE_PER);
#endif /* SAMA_HAL_IS_SECURE */
  sdObjectInit(&SD2);
  iqObjectInit(&SD2.iqueue, sd_in_buf2, sizeof sd_in_buf2, NULL, &SD2);
  oqObjectInit(&SD2.oqueue, sd_out_buf2, sizeof sd_out_buf2, notify2, &SD2);
  SD2.uart = UART2;
  SD2.clock = SAMA_UART2CLK;

  aicSetSourcePriority(ID_UART2, SAMA_SERIAL_UART2_IRQ_PRIORITY);
  aicSetSourceHandler(ID_UART2, SAMA_UART2_HANDLER);
  aicEnableInt(ID_UART2);
#endif

#if SAMA_SERIAL_USE_UART3
#if SAMA_HAL_IS_SECURE
  mtxConfigPeriphSecurity(MATRIX1, ID_UART3, SECURE_PER);
#endif /* SAMA_HAL_IS_SECURE */
  sdObjectInit(&SD3);
  iqObjectInit(&SD3.iqueue, sd_in_buf3, sizeof sd_in_buf3, NULL, &SD3);
  oqObjectInit(&SD3.oqueue, sd_out_buf3, sizeof sd_out_buf3, notify3, &SD3);
  SD3.uart = UART3;
  SD3.clock = SAMA_UART3CLK;

  aicSetSourcePriority(ID_UART3, SAMA_SERIAL_UART3_IRQ_PRIORITY);
  aicSetSourceHandler(ID_UART3, SAMA_UART3_HANDLER);
  aicEnableInt(ID_UART3);
#endif

#if SAMA_SERIAL_USE_UART4
#if SAMA_HAL_IS_SECURE
  mtxConfigPeriphSecurity(MATRIX1, ID_UART4, SECURE_PER);
#endif /* SAMA_HAL_IS_SECURE */
  sdObjectInit(&SD4);
  iqObjectInit(&SD4.iqueue, sd_in_buf4, sizeof sd_in_buf4, NULL, &SD4);
  oqObjectInit(&SD4.oqueue, sd_out_buf4, sizeof sd_out_buf4, notify4, &SD4);
  SD4.uart = UART4;
  SD4.clock = SAMA_UART4CLK;

  aicSetSourcePriority(ID_UART4, SAMA_SERIAL_UART4_IRQ_PRIORITY);
  aicSetSourceHandler(ID_UART4, SAMA_UART4_HANDLER);
  aicEnableInt(ID_UART4);
#endif

#if SAMA_SERIAL_USE_FLEXCOM0
#if SAMA_HAL_IS_SECURE
  mtxConfigPeriphSecurity(MATRIX1, ID_FLEXCOM0, SECURE_PER);
#endif /* SAMA_HAL_IS_SECURE */
  sdObjectInit(&FSD0);
  iqObjectInit(&FSD0.iqueue, sdFlex_in_buf0, sizeof sdFlex_in_buf0, NULL, &FSD0);
  oqObjectInit(&FSD0.oqueue, sdFlex_out_buf0, sizeof sdFlex_out_buf0, notifyFlex0, &FSD0);
  FSD0.flexcom = FLEXCOM0;
  FSD0.usart   = USART0;
  FSD0.clock   = SAMA_FLEXCOM0CLK;

  aicSetSourcePriority(ID_USART0, SAMA_SERIAL_FLEXCOM0_IRQ_PRIORITY);
  aicSetSourceHandler(ID_USART0, SAMA_SERIAL_FLEXCOM0_HANDLER);
  aicEnableInt(ID_USART0);
#endif

#if SAMA_SERIAL_USE_FLEXCOM1
#if SAMA_HAL_IS_SECURE
  mtxConfigPeriphSecurity(MATRIX1, ID_FLEXCOM1, SECURE_PER);
#endif /* SAMA_HAL_IS_SECURE */
  sdObjectInit(&FSD1);
  iqObjectInit(&FSD1.iqueue, sdFlex_in_buf1, sizeof sdFlex_in_buf1, NULL, &FSD1);
  oqObjectInit(&FSD1.oqueue, sdFlex_out_buf1, sizeof sdFlex_out_buf1, notifyFlex1, &FSD1);
  FSD1.flexcom = FLEXCOM1;
  FSD1.usart   = USART1;
  FSD1.clock   = SAMA_FLEXCOM1CLK;

  aicSetSourcePriority(ID_USART1, SAMA_SERIAL_FLEXCOM1_IRQ_PRIORITY);
  aicSetSourceHandler(ID_USART1, SAMA_SERIAL_FLEXCOM1_HANDLER);
  aicEnableInt(ID_USART1);
#endif

#if SAMA_SERIAL_USE_FLEXCOM2
#if SAMA_HAL_IS_SECURE
  mtxConfigPeriphSecurity(MATRIX1, ID_FLEXCOM2, SECURE_PER);
#endif /* SAMA_HAL_IS_SECURE */
  sdObjectInit(&FSD2);
  iqObjectInit(&FSD2.iqueue, sdFlex_in_buf2, sizeof sdFlex_in_buf2, NULL, &FSD2);
  oqObjectInit(&FSD2.oqueue, sdFlex_out_buf2, sizeof sdFlex_out_buf2, notifyFlex2, &FSD2);
  FSD2.flexcom = FLEXCOM2;
  FSD2.usart   = USART2;
  FSD2.clock   = SAMA_FLEXCOM2CLK;

  aicSetSourcePriority(ID_USART2, SAMA_SERIAL_FLEXCOM2_IRQ_PRIORITY);
  aicSetSourceHandler(ID_USART2, SAMA_SERIAL_FLEXCOM2_HANDLER);
  aicEnableInt(ID_USART2);
#endif

#if SAMA_SERIAL_USE_FLEXCOM3
#if SAMA_HAL_IS_SECURE
  mtxConfigPeriphSecurity(MATRIX1, ID_FLEXCOM3, SECURE_PER);
#endif /* SAMA_HAL_IS_SECURE */
  sdObjectInit(&FSD3);
  iqObjectInit(&FSD3.iqueue, sdFlex_in_buf3, sizeof sdFlex_in_buf3, NULL, &FSD3);
  oqObjectInit(&FSD3.oqueue, sdFlex_out_buf3, sizeof sdFlex_out_buf3, notifyFlex3, &FSD3);
  FSD3.flexcom = FLEXCOM3;
  FSD3.usart   = USART3;
  FSD3.clock   = SAMA_FLEXCOM3CLK;

  aicSetSourcePriority(ID_USART3, SAMA_SERIAL_FLEXCOM3_IRQ_PRIORITY);
  aicSetSourceHandler(ID_USART3, SAMA_SERIAL_FLEXCOM3_HANDLER);
  aicEnableInt(ID_USART3);
#endif

#if SAMA_SERIAL_USE_FLEXCOM4
#if SAMA_HAL_IS_SECURE
  mtxConfigPeriphSecurity(MATRIX1, ID_FLEXCOM4, SECURE_PER);
#endif /* SAMA_HAL_IS_SECURE */
  sdObjectInit(&FSD4);
  iqObjectInit(&FSD4.iqueue, sdFlex_in_buf4, sizeof sdFlex_in_buf4, NULL, &FSD4);
  oqObjectInit(&FSD4.oqueue, sdFlex_out_buf4, sizeof sdFlex_out_buf4, notifyFlex4, &FSD4);
  FSD4.flexcom = FLEXCOM4;
  FSD4.usart   = USART4;
  FSD4.clock   = SAMA_FLEXCOM4CLK;

  aicSetSourcePriority(ID_USART4, SAMA_SERIAL_FLEXCOM4_IRQ_PRIORITY);
  aicSetSourceHandler(ID_USART4, SAMA_SERIAL_FLEXCOM4_HANDLER);
  aicEnableInt(ID_USART4);
#endif
}

void sd_lld_start(SerialDriver *sdp, const SerialConfig *config) {

  if (config == NULL) {

    config = &default_config;
  }
  if (sdp->state == SD_STOP) {
#if SAMA_SERIAL_USE_UART0
    if (&SD0 == sdp) {
      pmcEnableUART0();
    }
#endif
#if SAMA_SERIAL_USE_UART1
    if (&SD1 == sdp) {
      pmcEnableUART1();
    }
#endif
#if SAMA_SERIAL_USE_UART2
    if (&SD2 == sdp) {
      pmcEnableUART2();
    }
#endif
#if SAMA_SERIAL_USE_UART3
    if (&SD3 == sdp) {
      pmcEnableUART3();
    }
#endif
#if SAMA_SERIAL_USE_UART4
    if (&SD4 == sdp) {
      pmcEnableUART4();
    }
#endif
#if SAMA_SERIAL_USE_FLEXCOM0
    if (&FSD0 == sdp) {
      pmcEnableFLEXCOM0();
    }
#endif
#if SAMA_SERIAL_USE_FLEXCOM1
    if (&FSD1 == sdp) {
      pmcEnableFLEXCOM1();
    }
#endif
#if SAMA_SERIAL_USE_FLEXCOM2
    if (&FSD2 == sdp) {
      pmcEnableFLEXCOM2();
    }
#endif
#if SAMA_SERIAL_USE_FLEXCOM3
    if (&FSD3 == sdp) {
      pmcEnableFLEXCOM3();
    }
#endif
#if SAMA_SERIAL_USE_FLEXCOM4
    if (&FSD4 == sdp) {
      pmcEnableFLEXCOM4();
    }
#endif
  }
  uart_init(sdp, config);
}

void sd_lld_stop(SerialDriver *sdp) {

  if (sdp->state == SD_READY) {
    /* UART is de-initialized then clocks are disabled.*/
    uart_deinit(sdp);

#if SAMA_SERIAL_USE_UART0
    if (&SD0 == sdp) {
      pmcDisableUART0();
      return;
    }
#endif
#if SAMA_SERIAL_USE_UART1
    if (&SD1 == sdp) {
      pmcDisableUART1();
      return;
    }
#endif
#if SAMA_SERIAL_USE_UART2
    if (&SD2 == sdp) {
      pmcDisableUART2();
      return;
    }
#endif
#if SAMA_SERIAL_USE_UART3
    if (&SD3 == sdp) {
      pmcDisableUART3();
      return;
    }
#endif
#if SAMA_SERIAL_USE_UART4
    if (&SD4 == sdp) {
      pmcDisableUART4();
      return;
    }
#endif
#if SAMA_SERIAL_USE_FLEXCOM0
    if (&FSD0 == sdp) {
      pmcDisableFLEXCOM0();
      return;
    }
#endif
#if SAMA_SERIAL_USE_FLEXCOM1
    if (&FSD1 == sdp) {
      pmcDisableFLEXCOM1();
      return;
    }
#endif
#if SAMA_SERIAL_USE_FLEXCOM2
    if (&FSD2 == sdp) {
      pmcDisableFLEXCOM2();
      return;
    }
#endif
#if SAMA_SERIAL_USE_FLEXCOM3
    if (&FSD3 == sdp) {
      pmcDisableFLEXCOM3();
      return;
    }
#endif
#if SAMA_SERIAL_USE_FLEXCOM4
    if (&FSD4 == sdp) {
      pmcDisableFLEXCOM4();
      return;
    }
#endif
  }
}
